--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e599c74",
    "metadata": {},
    "source": [
     "# Assignment"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb65c07",
    "metadata": {},
    "source": [
     "here comes info about the assignment"
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "664cd6b4",
    "metadata": {},
    "source": [
     "## Import libraries"
@@ -26,7 +23,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16004f15",
    "metadata": {},
    "source": [
     "here come all the imported libraries"
@@ -35,9 +31,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2cc0a442",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-229a5ae7b962>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msignal\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfind_peaks\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph_objects\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgo\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexpress\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpx\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmake_subplots\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
@@ -49,14 +56,13 @@
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
     "import datetime\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt #test\n",
     "%matplotlib inline\n",
     "import geopandas as gpd"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9e75c75a",
    "metadata": {},
    "source": [
     "## Part I - Data import"
@@ -64,7 +70,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5282eba5",
    "metadata": {},
    "source": [
     "Here comes the first part of the assignment. Importing the filtered data. Create a dataframe.\n",
@@ -74,7 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e30cb3f",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +497,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d6a189",
    "metadata": {},
    "source": [
     " "
@@ -503,7 +505,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "59448389",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +904,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12447d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +912,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6bac8b7",
    "metadata": {},
    "source": [
     "## Part II - Data processing"
@@ -920,7 +919,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd80a2e5",
    "metadata": {},
    "source": [
     "Peak finding. Check of common peaks between data sets. "
@@ -928,7 +926,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c52959c",
    "metadata": {},
    "source": [
     " "
@@ -936,7 +933,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3eef9b2a",
    "metadata": {},
    "source": [
     "## Part III - Data visualisation"
@@ -944,7 +940,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e22aa8",
    "metadata": {},
    "source": [
     "Conclusion. Relate found info from Part II to our RQ. Perhaps with graphs, maps, etc. "
@@ -953,7 +948,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0280147",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -961,7 +955,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84f1334",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -969,7 +962,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -983,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
