--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [
@@ -96,224 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>who_region</th>\n",
-       "      <th>iso3</th>\n",
-       "      <th>country_name</th>\n",
-       "      <th>city</th>\n",
-       "      <th>year</th>\n",
-       "      <th>version</th>\n",
-       "      <th>pm10_concentration</th>\n",
-       "      <th>pm25_concentration</th>\n",
-       "      <th>no2_concentration</th>\n",
-       "      <th>pm10_tempcov</th>\n",
-       "      <th>pm25_tempcov</th>\n",
-       "      <th>no2_tempcov</th>\n",
-       "      <th>type_of_stations</th>\n",
-       "      <th>reference</th>\n",
-       "      <th>web_link</th>\n",
-       "      <th>population</th>\n",
-       "      <th>population_source</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>who_ms</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3_Sear</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Chennai</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>version 2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>U.S. Department of State, United States Enviro...</td>\n",
-       "      <td>https://www.airnow.gov/index.cfm?action=airnow...</td>\n",
-       "      <td>9890427</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13,08784</td>\n",
-       "      <td>80,27847</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3_Sear</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Solapur</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>version 2022, version 2018</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Central Pollution Control Board India, Environ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>985568</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17,6599188</td>\n",
-       "      <td>75,9063906</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3_Sear</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Chennai</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>version 2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>U.S. Department of State, United States Enviro...</td>\n",
-       "      <td>[[[\"EPA AirNow DOS\",\"http://airnow.gov/index.c...</td>\n",
-       "      <td>9890427</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13,08784</td>\n",
-       "      <td>80,27847</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3_Sear</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Hyderabad</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>version 2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>U.S. Department of State, United States Enviro...</td>\n",
-       "      <td>[[[\"EPA AirNow DOS\",\"http://airnow.gov/index.c...</td>\n",
-       "      <td>8943523</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17,38405</td>\n",
-       "      <td>78,45636</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3_Sear</td>\n",
-       "      <td>IND</td>\n",
-       "      <td>India</td>\n",
-       "      <td>Pune</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>version 2022</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Central Pollution Control Board India, Environ...</td>\n",
-       "      <td>http://www.cpcb.gov.in/CAAQM/</td>\n",
-       "      <td>5727530</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18,5053196</td>\n",
-       "      <td>73,8238391</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  who_region iso3 country_name       city  year                     version  \\\n",
-       "0     3_Sear  IND        India    Chennai  2018                version 2022   \n",
-       "1     3_Sear  IND        India    Solapur  2016  version 2022, version 2018   \n",
-       "2     3_Sear  IND        India    Chennai  2019                version 2022   \n",
-       "3     3_Sear  IND        India  Hyderabad  2019                version 2022   \n",
-       "4     3_Sear  IND        India       Pune  2017                version 2022   \n",
-       "\n",
-       "  pm10_concentration pm25_concentration  no2_concentration  pm10_tempcov  \\\n",
-       "0                NaN               30.0                NaN           NaN   \n",
-       "1                NaN               39.0                NaN           NaN   \n",
-       "2                NaN               39.0                NaN           NaN   \n",
-       "3                NaN               42.0                NaN           NaN   \n",
-       "4                NaN               43.0                NaN           NaN   \n",
-       "\n",
-       "   pm25_tempcov  no2_tempcov type_of_stations  \\\n",
-       "0          91.0          NaN              NaN   \n",
-       "1          99.0          NaN              NaN   \n",
-       "2          85.0          NaN              NaN   \n",
-       "3          87.0          NaN              NaN   \n",
-       "4           NaN          NaN              NaN   \n",
-       "\n",
-       "                                           reference  \\\n",
-       "0  U.S. Department of State, United States Enviro...   \n",
-       "1  Central Pollution Control Board India, Environ...   \n",
-       "2  U.S. Department of State, United States Enviro...   \n",
-       "3  U.S. Department of State, United States Enviro...   \n",
-       "4  Central Pollution Control Board India, Environ...   \n",
-       "\n",
-       "                                            web_link population  \\\n",
-       "0  https://www.airnow.gov/index.cfm?action=airnow...    9890427   \n",
-       "1                                                NaN     985568   \n",
-       "2  [[[\"EPA AirNow DOS\",\"http://airnow.gov/index.c...    9890427   \n",
-       "3  [[[\"EPA AirNow DOS\",\"http://airnow.gov/index.c...    8943523   \n",
-       "4                      http://www.cpcb.gov.in/CAAQM/    5727530   \n",
-       "\n",
-       "   population_source    latitude   longitude  who_ms  \n",
-       "0                NaN    13,08784    80,27847       1  \n",
-       "1                NaN  17,6599188  75,9063906       1  \n",
-       "2                NaN    13,08784    80,27847       1  \n",
-       "3                NaN    17,38405    78,45636       1  \n",
-       "4                NaN  18,5053196  73,8238391       1  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\HHapp\\Downloads\\Python GroupProject\\TIL6010-GroupProject-1\\GroupProject-Layout.ipynb Cell 9\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HHapp/Downloads/Python%20GroupProject/TIL6010-GroupProject-1/GroupProject-Layout.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mhead(\u001b[39m5\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
-    "df.head()"
+    "df.head(5)"
    ]
   },
   {
@@ -326,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "59448389",
    "metadata": {},
    "outputs": [
@@ -1477,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "12447d88",
    "metadata": {},
    "outputs": [],
