--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -52,7 +52,8 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import geopandas as gpd\n",
-    "#comma is added here"
+    "#comma is added here\n",
+    "#comma added by ralf"
    ]
   },
   {
