--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -1488,6 +1488,416 @@
    "source": [
     "# Maybe we should merge the data so that we have one row per country (instead of now per city within a country)\n",
     "# We need to filter the data, get rid of columns that we will not look at."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "974360b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path= 'Emissions_Eurostat_data.csv'\n",
+    "df = pd.read_csv(file_path, sep = ';') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "94dc7f8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data extracted on 17/10/2023 20:46:16 from [ESTAT]</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 62</th>\n",
+       "      <th>Unnamed: 63</th>\n",
+       "      <th>Unnamed: 64</th>\n",
+       "      <th>Unnamed: 65</th>\n",
+       "      <th>Unnamed: 66</th>\n",
+       "      <th>Unnamed: 67</th>\n",
+       "      <th>Unnamed: 68</th>\n",
+       "      <th>Unnamed: 69</th>\n",
+       "      <th>Unnamed: 70</th>\n",
+       "      <th>Unnamed: 71</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>400</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>Transport (fuel used)</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "      <td>:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>International aviation LTO (civil)</td>\n",
+       "      <td>288</td>\n",
+       "      <td>:</td>\n",
+       "      <td>402</td>\n",
+       "      <td>27</td>\n",
+       "      <td>:</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>280</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>215</td>\n",
+       "      <td>:</td>\n",
+       "      <td>431</td>\n",
+       "      <td>26</td>\n",
+       "      <td>:</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>International aviation cruise (civil)</td>\n",
+       "      <td>849</td>\n",
+       "      <td>:</td>\n",
+       "      <td>2.871</td>\n",
+       "      <td>185</td>\n",
+       "      <td>:</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>612</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>57</td>\n",
+       "      <td>57</td>\n",
+       "      <td>608</td>\n",
+       "      <td>:</td>\n",
+       "      <td>2.728</td>\n",
+       "      <td>184</td>\n",
+       "      <td>:</td>\n",
+       "      <td>67</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>Domestic aviation LTO (civil)</td>\n",
+       "      <td>58</td>\n",
+       "      <td>:</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>:</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>:</td>\n",
+       "      <td>61</td>\n",
+       "      <td>4</td>\n",
+       "      <td>:</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>Romania</td>\n",
+       "      <td>Domestic aviation cruise (civil)</td>\n",
+       "      <td>217</td>\n",
+       "      <td>:</td>\n",
+       "      <td>160</td>\n",
+       "      <td>10</td>\n",
+       "      <td>:</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102</td>\n",
+       "      <td>:</td>\n",
+       "      <td>168</td>\n",
+       "      <td>10</td>\n",
+       "      <td>:</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>Türkiye</td>\n",
+       "      <td>National navigation (shipping)</td>\n",
+       "      <td>1.883</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.448</td>\n",
+       "      <td>9.850</td>\n",
+       "      <td>:</td>\n",
+       "      <td>56</td>\n",
+       "      <td>2.668</td>\n",
+       "      <td>1.409</td>\n",
+       "      <td>...</td>\n",
+       "      <td>:</td>\n",
+       "      <td>2.229</td>\n",
+       "      <td>2.070</td>\n",
+       "      <td>1.310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24.669</td>\n",
+       "      <td>6.854</td>\n",
+       "      <td>:</td>\n",
+       "      <td>1.999</td>\n",
+       "      <td>1.856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>569</th>\n",
+       "      <td>Türkiye</td>\n",
+       "      <td>National total for the entire territory (based...</td>\n",
+       "      <td>2.807.868</td>\n",
+       "      <td>52</td>\n",
+       "      <td>941.351</td>\n",
+       "      <td>2.309.555</td>\n",
+       "      <td>682.896</td>\n",
+       "      <td>291.714</td>\n",
+       "      <td>371.971</td>\n",
+       "      <td>2.428.722</td>\n",
+       "      <td>...</td>\n",
+       "      <td>877.812</td>\n",
+       "      <td>244.346</td>\n",
+       "      <td>315.565</td>\n",
+       "      <td>1.785.568</td>\n",
+       "      <td>35</td>\n",
+       "      <td>980.097</td>\n",
+       "      <td>2.697.214</td>\n",
+       "      <td>930.046</td>\n",
+       "      <td>235.889</td>\n",
+       "      <td>299.107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>570</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>571</th>\n",
+       "      <td>Special value</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>:</td>\n",
+       "      <td>not available</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>173 rows × 72 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Data extracted on 17/10/2023 20:46:16 from [ESTAT]  \\\n",
+       "400                                            Romania   \n",
+       "401                                            Romania   \n",
+       "402                                            Romania   \n",
+       "403                                            Romania   \n",
+       "404                                            Romania   \n",
+       "..                                                 ...   \n",
+       "568                                            Türkiye   \n",
+       "569                                            Türkiye   \n",
+       "570                                                NaN   \n",
+       "571                                      Special value   \n",
+       "572                                                  :   \n",
+       "\n",
+       "                                            Unnamed: 1 Unnamed: 2 Unnamed: 3  \\\n",
+       "400                              Transport (fuel used)          :          :   \n",
+       "401                 International aviation LTO (civil)        288          :   \n",
+       "402              International aviation cruise (civil)        849          :   \n",
+       "403                      Domestic aviation LTO (civil)         58          :   \n",
+       "404                   Domestic aviation cruise (civil)        217          :   \n",
+       "..                                                 ...        ...        ...   \n",
+       "568                     National navigation (shipping)      1.883          0   \n",
+       "569  National total for the entire territory (based...  2.807.868         52   \n",
+       "570                                                NaN        NaN        NaN   \n",
+       "571                                                NaN        NaN        NaN   \n",
+       "572                                      not available        NaN        NaN   \n",
+       "\n",
+       "    Unnamed: 4 Unnamed: 5 Unnamed: 6 Unnamed: 7 Unnamed: 8 Unnamed: 9  ...  \\\n",
+       "400          :          :          :          :          :          :  ...   \n",
+       "401        402         27          :          4          4        280  ...   \n",
+       "402      2.871        185          :         41         41        612  ...   \n",
+       "403         50          4          :          0          0         45  ...   \n",
+       "404        160         10          :          1          1        109  ...   \n",
+       "..         ...        ...        ...        ...        ...        ...  ...   \n",
+       "568     35.448      9.850          :         56      2.668      1.409  ...   \n",
+       "569    941.351  2.309.555    682.896    291.714    371.971  2.428.722  ...   \n",
+       "570        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "571        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "572        NaN        NaN        NaN        NaN        NaN        NaN  ...   \n",
+       "\n",
+       "    Unnamed: 62 Unnamed: 63 Unnamed: 64 Unnamed: 65 Unnamed: 66 Unnamed: 67  \\\n",
+       "400           :           :           :           :           :           :   \n",
+       "401           :           4           4         215           :         431   \n",
+       "402           :          57          57         608           :       2.728   \n",
+       "403           :           0           0          48           :          61   \n",
+       "404           :           1           1         102           :         168   \n",
+       "..          ...         ...         ...         ...         ...         ...   \n",
+       "568           :       2.229       2.070       1.310           0      24.669   \n",
+       "569     877.812     244.346     315.565   1.785.568          35     980.097   \n",
+       "570         NaN         NaN         NaN         NaN         NaN         NaN   \n",
+       "571         NaN         NaN         NaN         NaN         NaN         NaN   \n",
+       "572         NaN         NaN         NaN         NaN         NaN         NaN   \n",
+       "\n",
+       "    Unnamed: 68 Unnamed: 69 Unnamed: 70 Unnamed: 71  \n",
+       "400           :           :           :           :  \n",
+       "401          26           :           5           5  \n",
+       "402         184           :          67          67  \n",
+       "403           4           :           0           0  \n",
+       "404          10           :           1           1  \n",
+       "..          ...         ...         ...         ...  \n",
+       "568       6.854           :       1.999       1.856  \n",
+       "569   2.697.214     930.046     235.889     299.107  \n",
+       "570         NaN         NaN         NaN         NaN  \n",
+       "571         NaN         NaN         NaN         NaN  \n",
+       "572         NaN         NaN         NaN         NaN  \n",
+       "\n",
+       "[173 rows x 72 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[400:]\n",
+    "#i dont know if this dataset is useful, because the columns are unnamed so we dont know what were measuring"
    ]
   },
   {
