changed the dataset import

--- a/GroupProject-Layout.ipynb
+++ b/GroupProject-Layout.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "2cc0a442",
    "metadata": {},
    "outputs": [],
@@ -73,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "5e30cb3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'emission_data_eurostatt.csv'\n",
+    "file_path = 'Greenhouse_gas_emissions.csv'\n",
     "\n",
     "df = pd.read_csv(file_path, sep = ';') \n",
     "# The file had an incorrect delimiter which caused a ParserError,\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "bf8fabfe",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
        "29  Switzerland   -1,766.42         NaN   -1,426.68"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "12447d88",
    "metadata": {},
    "outputs": [],
